[package]
name = "alloy_demo"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Daniel Liu <139250065@qq.com>"]
description = "A demo of ERC20 client which is built with alloy.rs"

[dependencies]
alloy = { version = "1.0.16", features = ["full"] }
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
